tests/baselines/reference/classExpressionTest2.errors.txt
tests/cases/compiler/classExpressionTest2.ts(2,19): error TS9003: 'class' expressions are not currently supported.
tests/cases/compiler/classExpressionTest2.ts(5,20): error TS2304: Cannot find name 'X'.


==== tests/cases/compiler/classExpressionTest2.ts (2 errors) ====
    function M() {
        var m = class C<X> {
                      ~
!!! error TS9003: 'class' expressions are not currently supported.
            f<T>() {
                var t: T;
                var x: X;
                       ~
!!! error TS2304: Cannot find name 'X'.
                return { t, x };
            }
        }
    
        var v = new m<number>();
        return v.f<string>();
    }